src/views/OrderPage/OrderPage.scss
@import "/src/sass/mixins.scss";
@import "/src/sass/variables.scss";
@import "/src/sass/colors.scss";

.orders {
  width: 920px;
  margin: 7px auto;
  color: $tertiary-text-color;

  .orders-nav {
    font-size: $font-size-14px;

    .your-account {
      margin-right: 5px;
      color: $secondary-link-text-color;
      text-decoration: none;
    }

    a:hover {
      @include linkHoverEffect;
    }

    span {
      margin-right: 5px;
    }

    .your-orders {
      margin: 0;
      color: #c45500;
      text-decoration: none;
    }
  }

  .search-orders {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 16px 0 16px;

    h1 {
      font-size: 28px;
      font-weight: normal;
    }

    .order-search-spacing {
      position: relative;

      img {
        width: 16px;
        height: 16px;
        position: absolute;
        top: 20%;
        left: 3%;
      }

      .order-search-bar {
        width: 330px;
        height: 31px;
        padding: 7px 30px 7px;
        margin-right: 10px;
        border: 1px solid #888c8c;
        border-radius: 4px;
        box-shadow: 0 1px 2px rgba(15, 17, 17, 0.15) inset;
      }

      .order-search-bar:focus {
        background-color: #f7feff;
        outline: 1px solid #000000;
        border: $secondary-border-color;
        box-shadow: 0 0 0 4px #c8f3fa, 0 1px 2px rgba(15, 17, 17, 0.15) inset;
      }
    }

    .order-search-button {
      padding: 6px 8px;
      font-weight: bold;
      border-radius: 15px;
      background-color: #303333;
      color: $primary-text-color;
      cursor: pointer;
    }

    .order-search-button:hover {
      background-color: #0f1111;
    }
  }

  .order-infos {
    height: 29px;
    display: flex;
    align-items: center;
    margin-left: 18px;
    list-style-type: none;

    .order-infos-list {
      padding: 5px 17px;
      font-size: $font-size-14px;
      color: $secondary-link-text-color;
      cursor: pointer;
    }

    .order-infos-list:hover {
      @include linkHoverEffect;
    }

    .orders-id,
    .buy-again-id,
    .not-yet-shipped-id,
    .digital-orders-id,
    .local-store-orders-id,
    .cancelled-orders-id {
      font-weight: bold;
      border-bottom: 2px solid #e47911;
      color: #000000;
    }
  }

  .divider {
    width: 100%;
    height: 1px;
    margin-bottom: 16px;
    background-color: #dddddd;
  }

  .order-history {
    label {
      font-size: $font-size-14px;
      font-weight: normal;
    }

    span {
      font-weight: bold;
    }

    select {
      @include selectStyle;
      margin-left: 4px;
      margin-bottom: 0;
    }

    select:focus {
      @include selectStyleFocus;
    }
  }

  .past-orders {
    display: flex;
    justify-content: center;
    flex-direction: column;
    margin: 24px 0 32px 0;
    font-size: $font-size-14px;

    .successful-order {
      width: 100%;
      height: 100px;
      padding: 15px;
      margin-bottom: 20px;
      border: 3px solid rgb(0, 128, 0);
      border-radius: 10px;

      .successful-order-text {
        display: flex;
        align-items: center;
        margin-bottom: 10px;
        font-size: $font-size-16px;

        img {
          width: 30px;
          height: 30px;
          margin-right: 15px;
        }
      }

      p {
        font-size: $font-size-14px;
        font-weight: bold;
      }
    }

    .purchased-item {
      height: 85px;
      display: flex;
      padding: 10px;
      margin-bottom: 10px;
      border: $tertiary-border-color;
      border-radius: 5px;

      .purchased-item-image {
        display: flex;
        justify-content: center;
        align-items: center;
        padding: 10px;

        img {
          width: 50px;
        }
      }

      .purchased-item-title {
        display: flex;
        align-items: flex-start;
        flex-direction: column;
        justify-content: space-between;
        font-size: 13px;

        p {
          margin-bottom: 5px;
        }

        .view-your-item {
          @include selectStyle;
          padding: 4px 10px 4px 10px;
        }

        .view-your-item:hover {
          background-color: #e3e3e3;
        }
      }
    }

    a {
      margin-left: 3px;
      color: $secondary-link-text-color;
      text-decoration: none;
      cursor: pointer;
    }

    a:hover {
      @include linkHoverEffect;
    }
  }

  .buy-again {
    display: flex;
    justify-content: center;
    margin: 24px 0 32px 0;
    font-size: $font-size-14px;
  }

  .not-yet-shipped {
    display: flex;
    justify-content: center;
    margin: 24px 0 32px 0;
    font-size: $font-size-14px;

    a {
      color: $secondary-link-text-color;
      text-decoration: none;
      @include linkHoverEffect;
    }
  }

  .cancelled-orders {
    display: flex;
    justify-content: center;
    margin: 24px 0 32px 0;
    font-size: $font-size-14px;

    a {
      color: $secondary-link-text-color;
      text-decoration: none;
      @include linkHoverEffect;
    }
  }
}

